<resources>
    <string name="app_name">CS2340-Rat-App</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_settings">Settings</string>
    <string name="mainActivity_heading">Rattata</string>
    <string name="mainActivity_username">Username</string>
    <string name="mainActivity_password">Password</string>
    <string name="mainActivity_newUser">New User?</string>
    <string name="mainActivity_loginButton">LOGIN</string>
    <string name="mainActivity_registerButton">REGISTER</string>
    <string name="title_activity_login_successful">LoginSuccessfulActivity</string>
    <string name="mainActivity_incorrectDetails">Incorrect username or password!</string>

    <string name="mainMenu_heading">Main Menu</string>
    <string name="mainMenu_mapView">Map View</string>
    <string name="mainMenu_listView">List View</string>
    <string name="mainMenu_logout">Logout</string>
    <string name="mainMenu_fromYear">From Year:</string>
    <string name="mainMenu_tillYear">Till Year:</string>
    <string name="mainMenu_incorrectYear">Invalid inputs!</string>
    <string name="mainMenu_report">Report Sighting</string>
    <string name="mainMenu_graphView">Graph View</string>

    <string name="loginSuccessful_homeButton">Home</string>
    <string name="loginSuccessful_addReportButton">Report</string>

    <string name="register_mainHeading">Register</string>
    <string name="register_confirmButton">Confirm</string>
    <string name="register_cancelButton">Cancel</string>
    <string name="register_userHeading">Username</string>
    <string name="register_passHeading">Password</string>
    <string name="register_adminButton">Admin?</string>
    <string name="register_fullNameHeading">Full Name</string>
    <string name="register_incorrectDetailsTextView">Invalid username or password!</string>
    <string name="title_activity_expanded_rat_sighting">ExpandedRatSightingActivity</string>

    <string name="expanded_dateHeading">Date Created :</string>
    <string name="expanded_locationHeading">Location Type :</string>
    <string name="expanded_zipHeading">Incident Zip :</string>
    <string name="expanded_addressHeading">Incident Address :</string>
    <string name="expanded_cityHeading">City :</string>
    <string name="expanded_boroughHeading">Borough :</string>
    <string name="expanded_latitudeHeading">Latitude :</string>
    <string name="expanded_longitudeHeading">Longitude :</string>
    <string name="title_activity_report_sighting">ReportSightingActivity</string>

    <string name="reportSighting_heading">Report Sighting</string>
    <string name="reportSighting_submitButton">Submit</string>
    <string name="reportSighting_cancelButton">Cancel</string>
    <string name="reportSighting_locationType">Location Type:</string>
    <string name="reportSighting_addressHeading">Incident Address:</string>
    <string name="reportSighting_zipHeading">Incident Zip:</string>
    <string name="reportSighting_cityHeading">City:</string>
    <string name="reportSighting_boroughHeading">Borough:</string>
    <string name="reportSighting_latitudeHeading">Latitude:</string>
    <string name="reportSighting_longitudeHeading">Longitude:</string>
    <string name="reportSighting_incorrectDetails">Incorrect Details!</string>
    <string name="title_activity_new_login_successful">NewLoginSuccessfulActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_graph_view">GraphViewActivity</string>

    <string name="graphView_heading">Graph View</string>
    <string name="graphView_homeButton">Home</string>
</resources>
