<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainMenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.shouryakhare.cs2340_rat_app.Controller.NewLoginSuccessfulActivity">


    <include
        layout="@layout/content_new_login_successful"
        android:layout_height="0dp"
        android:layout_width="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/include3" />

    <TextView
        android:id="@+id/mainMenu_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="66dp"
        android:fontFamily="casual"
        android:text="@string/mainMenu_heading"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/mainMenu_mapViewButton"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:text="@string/mainMenu_mapView"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_fromYearEditText" />

    <Button
        android:id="@+id/mainMenu_listViewButton"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="39dp"
        android:fontFamily="casual"
        android:text="@string/mainMenu_listView"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_mapViewButton"
        app:layout_constraintHorizontal_bias="0.495" />

    <Button
        android:id="@+id/mainMenu_logoutButton"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="casual"
        android:text="@string/mainMenu_logout"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_reportSightingButton"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/include3"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/mainMenu_fromYearEditText"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_fromYearTextView"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/mainMenu_fromYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/mainMenu_fromYear"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_Heading"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.199" />

    <EditText
        android:id="@+id/mainMenu_tillYearEditText"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="LabelFor"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.778"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_tillYearTextView" />

    <TextView
        android:id="@+id/mainMenu_tillYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/mainMenu_tillYear"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_Heading"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.669" />

    <TextView
        android:id="@+id/mainMenu_incorrectYearTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/mainMenu_incorrectYear"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_mapViewButton" />

    <Button
        android:id="@+id/mainMenu_reportSightingButton"
        android:layout_width="274dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="39dp"
        android:fontFamily="casual"
        android:text="@string/mainMenu_report"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenu_listViewButton" />

</android.support.constraint.ConstraintLayout>
