<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.shouryakhare.cs2340_rat_app.Controller.RegistrationActivity"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">



    <TextView
        android:id="@+id/register_userHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/register_userHeading"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/register_usernameTextField"
        android:labelFor="@+id/register_usernameTextField"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/register_userHeading"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/register_passHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/register_passHeading"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="45dp"
        app:layout_constraintTop_toBottomOf="@+id/register_usernameTextField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/register_passwordTextField"
        android:labelFor="@+id/register_passwordTextField"
        android:layout_width="273dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/register_passHeading"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/registration_confirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/register_confirmButton"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/registration_cancelButton" />

    <CheckBox
        android:id="@+id/register_adminButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/register_adminButton"
        android:textStyle="bold"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/register_passwordTextField"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/registration_cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/register_cancelButton"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="20dp" />

</android.support.constraint.ConstraintLayout>
