<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.shouryakhare.cs2340_rat_app.Controller.ExpandedRatSightingActivity">


    <include
        layout="@layout/content_expanded_rat_sighting"
        android:layout_height="0dp"
        android:layout_width="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="1dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/include" />

    <TextView
        android:id="@+id/expanded_Heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="66dp"
        android:fontFamily="casual"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/expanded_dateHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="53dp"
        android:fontFamily="casual"
        android:text="@string/expanded_dateHeading"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expanded_Heading"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:fontFamily="casual"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/expanded_Heading"
        app:layout_constraintLeft_toRightOf="@+id/expanded_dateHeading"
        android:layout_marginLeft="62dp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_locationHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/expanded_locationHeading"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/expanded_dateHeading"
        android:layout_marginLeft="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/expanded_dateTextView"
        app:layout_constraintLeft_toRightOf="@+id/expanded_locationHeading"
        android:layout_marginLeft="57dp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_zipHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="@string/expanded_zipHeading"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expanded_locationHeading"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_zipTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/expanded_locationTextView"
        app:layout_constraintLeft_toRightOf="@+id/expanded_zipHeading"
        android:layout_marginLeft="71dp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_addressHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="@string/expanded_addressHeading"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expanded_zipHeading"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/expanded_zipTextView"
        app:layout_constraintLeft_toRightOf="@+id/expanded_addressHeading"
        android:layout_marginLeft="35dp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_cityHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/expanded_cityHeading"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/expanded_addressHeading"
        android:layout_marginLeft="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_cityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/expanded_addressTextView"
        app:layout_constraintLeft_toRightOf="@+id/expanded_cityHeading"
        android:layout_marginLeft="130dp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/exapnded_boroughHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/expanded_boroughHeading"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/expanded_cityHeading"
        android:layout_marginLeft="38dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_boroughTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/expanded_cityTextView"
        app:layout_constraintLeft_toRightOf="@+id/exapnded_boroughHeading"
        android:layout_marginLeft="99dp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_latitudeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/expanded_latitudeHeading"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@+id/exapnded_boroughHeading"
        android:layout_marginLeft="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_longitudeHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/expanded_longitudeHeading"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/expanded_latitudeHeading"
        android:layout_marginLeft="39dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintVertical_bias="0.111"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_latitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/expanded_boroughTextView"
        app:layout_constraintLeft_toRightOf="@+id/expanded_latitudeHeading"
        android:layout_marginLeft="97dp"
        tools:ignore="HardcodedText,RtlHardcoded" />

    <TextView
        android:id="@+id/expanded_longitudeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="TextView"
        android:textAlignment="textStart"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/include"
        app:layout_constraintTop_toBottomOf="@+id/expanded_latitudeTextView"
        app:layout_constraintVertical_bias="0.111"
        app:layout_constraintLeft_toRightOf="@+id/expanded_longitudeHeading"
        android:layout_marginLeft="85dp"
        tools:ignore="HardcodedText,RtlHardcoded" />


</android.support.constraint.ConstraintLayout>
